Matches list: add server-side search + pagination; keep both upcoming and finished.